--- a/package.json
+++ b/package.json
@@ -11,11 +11,26 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-regular-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "axios": "^1.9.0",
     "bootstrap": "^5.3.5",
+    "date-fns": "^2.30.0",
+    "dompurify": "^3.2.5",
+    "file-saver": "^2.0.5",
+    "framer-motion": "^12.6.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.1.5"
+    "react-router-dom": "^7.1.5",
+    "react-simple-wysiwyg": "^3.2.2",
+    "react-slick": "^0.30.3",
+    "react-split": "^2.0.14",
+    "slick-carousel": "^1.8.1",
+    "vite-plugin-clean": "^2.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
