--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,13 +1,9 @@
 {
     "compilerOptions": {
-        "baseUrl": ".",
-        "paths": {
-            "*": [
-                "src/*"
-            ]
-        }
+      "baseUrl": ".",
+      "paths": {
+        "@*": ["src/*"]
+      }
     },
-    "include": [
-        "src"
-    ]
-}
+    "include": ["src"]
+  }
