--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.5",
     "react-simple-wysiwyg": "^3.2.2",
+    "react-skinview3d": "^5.1.0",
     "react-slick": "^0.30.3",
     "react-split": "^2.0.14",
     "slick-carousel": "^1.8.1",
